--- a/application-dev.yml
+++ b/application-dev.yml
@@ -22,3 +22,15 @@ logging:
   level:
     org.springframework.web: debug
     com.cms: debug
+app:
+  menus:
+    - title: Home
+      name: Home
+      path: /
+    - title: Login
+      name: Login
+      path: /login
+  compiler:
+    timeout: 5
+    output-folder: /temp/
+  error: /error/    
