--- a/application-dev.yml
+++ b/application-dev.yml
@@ -25,7 +25,7 @@ logging:
 app:
   menus:
     - title: Home
-      name: Home
+      name: Pavan
       path: /
     - title: Login
       name: Login
