--- a/application-dev.yml
+++ b/application-dev.yml
@@ -1,5 +1,5 @@
 spring.datasource:
-  url: jdbc:mariadb://localhost:3306/cmsrevampdb
+  url: jdbc:mariadb://localhost:3306/cmsrevampnew
   username: root
   password: root
   driver-class-name: org.mariadb.jdbc.Driver
